<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backgroud"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoboFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text1passo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/_1_passo"
            android:textColor="@color/white"
            android:textSize="50dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/black"
            android:padding="25dp"
            android:text="@string/baixar_apk_robo"
            android:textColor="@color/white"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1passo"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/text2passo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/_2_passo"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="174dp"
            android:layout_height="144dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icons8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2passo"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
