<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".activity.MainActivity">

    <ImageView

        android:id="@+id/logo"
        android:layout_width="405dp"
        android:layout_height="209dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintVertical_bias="0.073" />

    <EditText
        android:id="@+id/edit_emaillogin"
        style="@style/Edit_text"
        android:hint="@string/email"
        android:drawableRight="@drawable/ic_email"
        android:inputType="textEmailAddress"
       app:layout_constraintStart_toStartOf="@id/containerComponents"
       app:layout_constraintEnd_toEndOf="@id/containerComponents"
       app:layout_constraintTop_toTopOf="@id/containerComponents"

        />

    <EditText
        android:id="@+id/edit_senhalogin"
        style="@style/Edit_text"
        android:layout_marginTop="24dp"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_emaillogin" />

    <ImageButton
        android:id="@+id/btnMostrarSenha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Mostrar Senha"
        android:src="@drawable/ic_eye"
        app:layout_constraintBottom_toBottomOf="@+id/edit_senhalogin"
        app:layout_constraintEnd_toEndOf="@+id/edit_senhalogin"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="@+id/edit_senhalogin"
        app:layout_constraintTop_toTopOf="@+id/edit_senhalogin"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/bt_entrar"
        style="@style/Button"
        android:layout_marginTop="4dp"
        android:text="@string/entrar"
        app:layout_constraintBottom_toBottomOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senhalogin" />

    <ProgressBar

        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:indeterminateTint="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/containerComponents" />

    <TextView

        android:id="@+id/text_tela_cadastro"
        android:layout_width="159dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_cadastro"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressbar" />

    <TextView

        android:id="@+id/text_telanovasenha"
        android:layout_width="159dp"
        android:layout_height="29dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_novasenha"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressbar" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sing_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressbar" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>